--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="icon" type="image/png" href="/img/food_2.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
  
 </head>
 <body>
     <!-- Header with sticky navigation -->
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">🍽️ Papaya</div>
+            <div class="logo"><i class="fas fa-utensils"></i> Papaya</div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="#starters">Starters</a></li>
-                <li><a href="#mains">Main Courses</a></li>
-                <li><a href="#drinks">Drinks</a></li>
-                <li><a href="#desserts">Desserts</a></li>
+                <li><a href="#starters">Starters <i class="fas fa-utensils"></i> </a></li>
+                <li><a href="#mains"> Main Courses <i class="fas fa-drumstick-bite"></i> </a></li>
+                <li><a href="#drinks"> Drinks <i class="fas fa-wine-glass-alt"></i></a></li>
             </ul>
             <div class="menu-toggle" id="menuToggle">
                 <span></span>
