--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header with sticky navigation -->
     <header class="header">
         <nav class="nav-container">
-            <div class="logo"><i class="fas fa-utensils"></i> Papaya</div>
+            <div class="logo"><a href="index.html"><i class="fas fa-utensils"></i> Papaya</a></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#starters">Starters <i class="fas fa-utensils"></i> </a></li>
                 <li><a href="#mains"> Main Courses <i class="fas fa-drumstick-bite"></i> </a></li>
@@ -39,7 +39,7 @@
 
             <!-- Starters section -->
             <section id="starters" class="menu-section">
-                <h2 class="section-title">Starters</h2>
+                <h2 class="section-title">Starters <i class="fas fa-utensils"></i> </h2>
                 <div class="menu-grid">
                     <div class="menu-card">
                         <div class="menu-item-header">
@@ -112,7 +112,7 @@
 
             <!-- Main Courses section -->
             <section id="mains" class="menu-section">
-                <h2 class="section-title">Main Courses</h2>
+                <h2 class="section-title">Main Courses <i class="fas fa-drumstick-bite"></i> </h2>
                 <div class="menu-grid">
                     <div class="menu-card">
                         <div class="menu-item-header">
@@ -520,7 +520,7 @@
 
             <!-- Drinks section -->
             <section id="drinks" class="menu-section">
-                <h2 class="section-title">Drinks</h2>
+                <h2 class="section-title">Drinks <i class="fas fa-wine-glass-alt"></i> </h2>
                 <div class="menu-grid">
                     <div class="menu-card">
                         <div class="menu-item-header">
