--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header with sticky navigation -->
     <header class="header">
         <nav class="nav-container">
-            <div class="logo"><a href="index.html"><i class="fas fa-utensils"></i> Papaya</a></div>
+            <div class="logo"><i class="fas fa-utensils"></i> Papaya</a></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#starters">Starters <i class="fas fa-utensils"></i> </a></li>
                 <li><a href="#mains"> Main Courses <i class="fas fa-drumstick-bite"></i> </a></li>
